# storage/api-docs/api-docs.json
@@ -222,7 +222,110 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "access_token": []
+                    }
+                ]
+            }
+        },
+        "/api/books": {
+            "post": {
+                "tags": [
+                    "Books"
+                ],
+                "summary": "Create book",
+                "description": "Add book to the library.",
+                "operationId": "App\\Http\\Controllers\\BooksController::create",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "description": "Create book",
+                                        "type": "integer",
+                                        "readOnly": "true",
+                                        "example": "1"
+                                    },
+                                    "title": {
+                                        "description": "Create book",
+                                        "type": "string",
+                                        "maxLength": 255,
+                                        "example": "Harry Potter and the Philosopher's Stone"
+                                    },
+                                    "isbn": {
+                                        "description": "Create book",
+                                        "type": "string",
+                                        "maxLength": 10,
+                                        "example": "1408855895"
+                                    },
+                                    "published_at": {
+                                        "description": "Create book",
+                                        "type": "date",
+                                        "example": "2014-01-22"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "A successfull book search.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Book"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "description": "Create book",
+                                            "type": "string",
+                                            "example": "The given data was invalid."
+                                        },
+                                        "errors": {
+                                            "description": "Create book",
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "isbn": {
+                                                        "description": "Create book",
+                                                        "type": "array",
+                                                        "items": {
+                                                            "type": "string",
+                                                            "example": "Must be a valid ISBN-10."
+                                                        }
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "access_token": []
+                    }
+                ]
             }
         }
     },
@@ -254,7 +357,8 @@
                         "enum": [
                             "CHECKED_OUT",
                             "AVAILABLE"
-                        ]
+                        ],
+                        "example": "AVAILABLE"
                     }
                 },
                 "type": "object",
